--- a/app/modules/companies/templates/companies/base.html
+++ b/app/modules/companies/templates/companies/base.html
@@ -111,6 +111,13 @@
                             <span>الإعدادات</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if current_path.startswith(url_for('company_portal.company_messages_list')) %}active{% endif %}"
+                            href="{{ url_for('company_portal.company_messages_list') }}">
+                            <i class="fas fa-envelope me-2"></i>
+                            <span>التواصل</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </aside>
